# pixo

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: build_feature_docs.py  pixo_features_detailed.docx  pixo_features_summary.docx
files/: description.md  plan.md  prompts.md
pixo/: __init__.py  api.py  cli.py
pixo/cloud/: colab_backend.py  config.py  kaggle_backend.py  router.py
pixo/core/: airgap.py  checkpoint.py  compare.py  downloader.py  envmanager.py  guardian.py  optimizer.py  output.py  pipeline.py  plugin.py  profiler.py  runner.py  sample.py  share.py
pixo/models/: registry.py
pixo/models/cards/depth_anything_v2/: modelcard.yaml  run.py
pixo/models/cards/florence2/: modelcard.yaml  run.py
pixo/models/cards/grounding_dino/: modelcard.yaml  run.py
pixo/models/cards/rtdetr/: modelcard.yaml  run.py
pixo/models/cards/sam2/: modelcard.yaml  run.py
pixo/models/cards/samurai/: modelcard.yaml  run.py
pixo/models/cards/yolov11/: modelcard.yaml  run.py
pixo/models/cards/yolov12/: modelcard.yaml  run.py
pixo/models/cards/yolov8/: modelcard.yaml  run.py
pixo/server/: app.py
pixo/server/ui/: index.html  package-lock.json  package.json  vite.config.js
pixo/server/ui/src/: App.jsx  index.css
pixo/server/ui/src/components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  progress.jsx  table.jsx
