[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixo"
version = "0.3.2"
description = "Vision, simplified. Run any computer vision model with one command."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["computer-vision", "yolo", "sam2", "cli", "inference", "gpu", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "huggingface-hub>=0.20.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.0.0", "opencv-python>=4.8.0"]
onnx = ["onnxruntime>=1.16.0"]
cloud = ["kaggle>=2.0.2"]
vision = ["transformers>=4.40.0", "torch>=2.0", "opencv-python>=4.8.0", "matplotlib>=3.7"]
web = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]
demo = ["gradio>=4.0.0"]
all = ["pixo[yolo,onnx,cloud,vision,web,demo]"]

[project.urls]
Homepage = "https://github.com/Janinduu/pixo"
Repository = "https://github.com/Janinduu/pixo"
Issues = "https://github.com/Janinduu/pixo/issues"

[project.scripts]
pixo = "pixo.cli:app"

[tool.setuptools.packages.find]
include = ["pixo*"]
exclude = ["pixo.server.ui*", "*.node_modules*", "*.dist*"]

[tool.setuptools.package-data]
"pixo.models.cards.depth_anything_v2" = ["modelcard.yaml"]
"pixo.models.cards.florence2" = ["modelcard.yaml"]
"pixo.models.cards.grounding_dino" = ["modelcard.yaml"]
"pixo.models.cards.rtdetr" = ["modelcard.yaml"]
"pixo.models.cards.sam2" = ["modelcard.yaml"]
"pixo.models.cards.samurai" = ["modelcard.yaml"]
"pixo.models.cards.yolov8" = ["modelcard.yaml"]
"pixo.models.cards.yolov11" = ["modelcard.yaml"]
"pixo.models.cards.yolov12" = ["modelcard.yaml"]
